data/collection/fixes/descriptions/scala/scala-6263
```scala
scala> class C(val a: Any) extends AnyVal; implicit def c2AnyRef(c: C): AnyRef = new {}
warning: there were 1 feature warnings; re-run with -feature for details
defined class C
c2AnyRef: (c: C)AnyRef

scala> val c = new C(0)
c: C = C@0

scala> type t = c.type
<console>:13: error: stable identifier required, but c2AnyRef(c) found.
       type t = c.type
                ^
```

The attempt to adapted `c` to `AnyRef` when checking stability of the prefix of the singleton type is both surprising and futile.